[tool.poetry]
name = "hook-odyssey"
version = "0.1.0"
description = "Hook Odyssey Python SDK"
authors = ["Regynald Augustin <regy@hook.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gql = {extras = ["aiohttp", "websockets"], version = "^3.6.0b0", allow-prereleases = true}
web3 = "^6.20.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
